<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/poketorre"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/pokedex" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/login_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_subtitle"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:hint="Email"
        android:textColorHint="@color/medium"
        android:textColor="@color/white"
        android:inputType="textEmailAddress"
        android:background="@null"
        android:gravity="center" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="32dp"
        android:hint="Password"
        android:textColorHint="@color/medium"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:background="@null"
        android:gravity="center" />

    <Button
        android:id="@+id/btn_login_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:text="Login"
        android:textSize="16sp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:contentDescription="@string/google_sign_in_button"
        android:text="@string/sign_in_with_google"
        android:textSize="16sp" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btn_login_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:text="@string/sign_in_with_facebook"
        android:textSize="16sp" />

</LinearLayout>
